# vlm-rknn

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.android  Dockerfile.native  ISSUES.md  PLAN.md  README.md  docker-compose.yml  settings.gradle
.github/workflows/: build.yml  shellcheck.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  rknn_jni.cpp
android/app/src/main/java/com/tristanpenman/qwenvlrknn/: MainActivity.java  RknnLlm.java  RknnLlmCallback.java
android/app/src/main/java/com/tristanpenman/vlmrknn/: MainActivity.java  RknnLlm.java  RknnLlmCallback.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
cpp/src/: cv2_utils.cc  cv2_utils.h  file_utils.cc  file_utils.h  ini.cc  ini.h  logger.cc  logger.h  main.cc  qwen_vl_rknn.cc  qwen_vl_rknn.h  registry.cc  registry.h  rknn_utils.cc  rknn_utils.h  server.cc  vlm_rknn.cc  vlm_rknn.h
cpp/tests/: qwen_vl_rknn_test.cc  vlm_rknn_test.cc
data/: server.example.ini
etc/: index.html
gradle/wrapper/: gradle-wrapper.properties
notes/: backends.md  conventions.md  qwen3.md  rkllm.md  siglip2.md  smol.md
scripts/: build-android.sh  build-native.sh  run-android-multi.sh  run-android.sh  send-query.py
src/: main.cc  qwen_vl_rknn.cc  qwen_vl_rknn.h
tests/: qwen_vl_rknn_test.cc
